--- a/example.env
+++ b/example.env
@@ -1,10 +1,9 @@
-IRC_ADDRESS= #IRC Server Address (If using subsplease put in irc.rizon.net)
+IRC_ADDRESS= irc.rizon.net
 IRC_USERNAME= #IRC Username, this will be displayed at the online tab
 
 MEDUSA_URL= #URL to pyMedUSA instence
 MEDUSA_API_KEY= #pyMedUSA API Key
 
-ENABLE_WEBHOOK=FALSE
 WEBHOOK_URL= #Discord webhook URL
 
 QBIT_BURL= #qBittorrent URL
