add a missing config to example env

--- a/example.env
+++ b/example.env
@@ -9,3 +9,4 @@ WEBHOOK_URL= #Discord webhook URL
 QBIT_BURL= #qBittorrent URL
 QBIT_USERNAME= #qBittorrent Username
 QBIT_PASSWORD= #qBittorrent Password
+QBIT_DOWNLOADPATH= #Path to where qbittorrent will save the file, if not resent qbittorrrent will save to default path
