minor and major improvement - added proper NickServ identification - changed the irc lib to a better maintained - finally moved to bun

--- a/example.env
+++ b/example.env
@@ -1,5 +1,6 @@
 IRC_ADDRESS=irc.rizon.net
 IRC_USERNAME= #IRC Username, this will be displayed at the online tab
+NICKSERV_PASS= # nickserv password
 
 MEDUSA_URL= #URL to pyMedUSA instence
 MEDUSA_API_KEY= #pyMedUSA API Key
