add configurable reolutions, and new grabber code

--- a/example.env
+++ b/example.env
@@ -2,6 +2,9 @@ IRC_ADDRESS=irc.rizon.net
 IRC_USERNAME= #IRC Username, this will be displayed at the online tab
 NICKSERV_PASS= # nickserv password
 
+# set the allowed resolution, seperated by commas (eg. 480p, 720p, 1080p) if you just want one put it in alone
+ALLOWED_RESOLUTION=1080p
+
 MEDUSA_URL= #URL to pyMedUSA instence
 MEDUSA_API_KEY= #pyMedUSA API Key
 
