--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "discord.js": "^14.11.0",
     "matrix-org-irc": "^2.2.0",
+    "node-cron": "^3.0.2",
     "qs": "^6.11.2"
   }
 }
