adding option to mute connection info to webhook, remove redundent logs

--- a/example.env
+++ b/example.env
@@ -8,7 +8,10 @@ ALLOWED_RESOLUTION=1080p
 MEDUSA_URL= #URL to pyMedUSA instence
 MEDUSA_API_KEY= #pyMedUSA API Key
 
+# If you dont want to use it, comment/remove the line
 WEBHOOK_URL= #Discord webhook URL
+# set to false if you dont want to announce the connection
+ANNOUNCE_CONNECTION=true
 
 QBIT_BURL= #qBittorrent URL
 QBIT_USERNAME= #qBittorrent Username
